[gd_scene load_steps=108 format=2]

[ext_resource path="res://assets/sprites/striker/spr_StrikerIdle_strip.png" type="Texture" id=1]
[ext_resource path="res://script/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/striker/spr_StrikerDash_strip.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/striker/spr_StrikerRun_strip.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/striker/spr_StrikerJump_strip.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/striker/spr_StrikerSlash_stripWithEffect.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/striker/spr_StrikerGetHit_strip.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/striker/spr_StrikerDeath_strip.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.36136, 16.6287 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1152, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1248, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1440, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1408, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1664, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1920, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1408, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1664, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1920, 0, 128, 96 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=96]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 14.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "get_hit",
"speed": 6.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "attack2",
"speed": 8.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "attack1",
"speed": 16.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "attack3",
"speed": 12.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "dash",
"speed": 16.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "attackFull",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "jump",
"speed": 12.0
}, {
"frames": [ SubResource( 99 ) ],
"loop": true,
"name": "dead",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 24.6934, 3.36179 )

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 20.8649, 14.588 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.79918, 3.18073 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 96 )
animation = "dead"
playing = true

[node name="attack1hitbox" type="Area2D" parent="AnimatedSprite" groups=[
"sword",
]]
position = Vector2( 12.3024, -0.992126 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/attack1hitbox"]
shape = SubResource( 97 )

[node name="attack1hitbox_flip_h" type="Area2D" parent="AnimatedSprite" groups=[
"sword",
]]
position = Vector2( -13.2283, -1.1244 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/attack1hitbox_flip_h"]
shape = SubResource( 97 )

[node name="attack2hitbox" type="Area2D" parent="AnimatedSprite" groups=[
"sword",
]]
position = Vector2( 11.3137, -3.6438 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/attack2hitbox"]
shape = SubResource( 98 )

[node name="attack2hitbox_flip_h" type="Area2D" parent="AnimatedSprite" groups=[
"sword",
]]
position = Vector2( -9.4548, -3.6438 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/attack2hitbox_flip_h"]
shape = SubResource( 98 )

[node name="attackTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
